--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "illuminate/database": "^5.6",
-    "fzaninotto/faker": "^1.8"
+    "php": ">=7.3",
+    "illuminate/database": "^5.6"
   }
 }
